--- a/index.html
+++ b/index.html
@@ -1,99 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search App with Excel Data</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-
-    <!-- Styling for Cards -->
-    <style>
-        .card {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            font-family: Arial, sans-serif;
-        }
-        .card h3 {
-            color: #333;
-        }
-        .card p {
-            color: #555;
-        }
-    </style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Terraforming Mars Tag Manager</title>
+<style>
+    /* Styling for body, table, and cards */
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin: 20px;
+        background: #000 url('wallpaper.jpg') no-repeat center center fixed;
+        background-size: cover;
+        color: white;
+    }
+    table { width: 100%; margin: 0 auto; border-collapse: collapse; background-color: rgba(0, 0, 0, 0.7); }
+    th, td { padding: 10px; border: 1px solid #ccc; }
+    th { background-color: rgba(255, 255, 255, 0.2); }
+    button { margin: 5px; padding: 5px 10px; background-color: #333; color: white; }
+    img { max-width: 100%; width: 40px; height: auto; }
+    h1, h2 { background-color: rgba(0, 0, 0, 0.6); padding: 10px; display: inline-block; }
+    #vpTracker, #trTracker, #cardLookupSection, #cardList {
+        margin-top: 20px; background-color: rgba(0, 0, 0, 0.6); padding: 20px; color: white;
+    }
+    .card {
+        border: 1px solid #ccc; padding: 10px; margin: 10px 0;
+        border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); font-family: Arial, sans-serif;
+    }
+</style>
 </head>
 <body>
-    <h1>Search Cards</h1>
-    <input type="text" id="search-input" placeholder="Search...">
-    <div id="results"></div>
+<h1>Terraforming Mars Tag Manager</h1>
 
-    <script>
-        // Step 1: Load and parse the Excel data
-        async function loadExcelData() {
-            const response = await fetch('https://killionaire23.github.io/TMMobile/Card%20Database%20Kami%20with%20tags.xlsx'); // Replace with your actual Excel file name
-            const arrayBuffer = await response.arrayBuffer();
-            const workbook = XLSX.read(arrayBuffer, { type: 'array' });
+<!-- Tag Tracker -->
+<table>
+<thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
+<tbody id="tagTable">
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth Tag</td><td><span id="earthCount">0</span></td>
+<td><button onclick="changeCount('earth', 1)">Add</button><button onclick="changeCount('earth', -1)">Remove</button></td></tr>
+<!-- Repeat rows for other tags as necessary -->
+</tbody>
+</table>
 
-            // Assuming data is in the first sheet
-            const firstSheetName = workbook.SheetNames[0];
-            const worksheet = workbook.Sheets[firstSheetName];
+<h2 id="totalTags">Total Tags: 0</h2>
 
-            // Convert sheet to JSON
-            const jsonData = XLSX.utils.sheet_to_json(worksheet);
-            return jsonData;
-        }
+<!-- VP Tracker -->
+<div id="vpTracker">
+<h2>Victory Points Tracker</h2>
+<p>Current VP: <span id="vpCount">0</span></p>
+<button onclick="changeVP(1)">Add VP</button>
+<button onclick="changeVP(-1)">Remove VP</button>
+</div>
 
-        // Step 2: Initialize and Load Data
-        async function initData() {
-            const data = await loadExcelData();
-            window.excelData = data; // Store data globally for search function
-            console.log(data); // Verify structure in the console
-        }
+<!-- TR Tracker -->
+<div id="trTracker">
+<h2>Terraforming Rating (TR) Tracker</h2>
+<p>Current TR: <span id="trCount">0</span></p>
+<button onclick="changeTR(1)">Add TR</button>
+<button onclick="changeTR(-1)">Remove TR</button>
+</div>
 
-        initData(); // Load the data initially
+<!-- Card Lookup Section -->
+<div id="cardLookupSection">
+<h2>Search Card by Name or Tags</h2>
+<p>Search for a card by name, VP, or tag:</p>
+<input id="search-input" placeholder="Enter card name, VP, or tag"/>
+<div id="cardDetails"></div>
+</div>
 
-        // Step 3: Implement search function to filter cards
-        function searchCards(query) {
-            if (!window.excelData) return;
+<!-- Cards Database Section -->
+<div id="cardList">
+<h2>Cards Database</h2>
+<ul id="cards"></ul>
+</div>
 
-            const filteredData = window.excelData.filter(item => {
-                const tagsMatch = item.tags && item.tags.toLowerCase().includes(query.toLowerCase());
-                const vpsMatch = item.Vps && item.Vps.toLowerCase().includes(query.toLowerCase());
-                return tagsMatch || vpsMatch;
-            });
+<script>
+    const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
 
-            displayResults(filteredData);
-        }
+    function changeCount(tag, delta) {
+        tagCounts[tag] += delta;
+        if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
+        document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
+        updateTotalTags();
+    }
 
-        // Step 4: Display filtered results
-        function displayResults(filteredData) {
-            const resultsContainer = document.getElementById('results');
-            resultsContainer.innerHTML = ''; // Clear previous results
+    function updateTotalTags() {
+        const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
+        document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
+    }
 
-            if (filteredData.length === 0) {
-                resultsContainer.innerHTML = '<p>No results found.</p>';
-                return;
-            }
+    let vpCount = 0;
+    function changeVP(delta) {
+        vpCount += delta;
+        if (vpCount < 0) { vpCount = 0; }
+        document.getElementById('vpCount').innerText = vpCount;
+    }
 
-            filteredData.forEach(item => {
-                const card = document.createElement('div');
-                card.className = 'card';
-                card.innerHTML = `
-                    <h3>${item.Name || 'No Name'}</h3>
-                    <p><strong>Tags:</strong> ${item.tags || 'N/A'}</p>
-                    <p><strong>Vps:</strong> ${item.Vps || 'N/A'}</p>
-                `;
-                resultsContainer.appendChild(card);
-            });
-        }
+    let trCount = 0;
+    function changeTR(delta) {
+        trCount += delta;
+        if (trCount < 0) { trCount = 0; }
+        document.getElementById('trCount').innerText = trCount;
+    }
 
-        // Step 5: Search input event listener
-        document.getElementById('search-input').addEventListener('input', function() {
-            const query = this.value;
-            searchCards(query);
+    let cardsDatabase = [];
+
+    // Load JSON Data
+    async function loadJSONData() {
+        const response = await fetch('Card Database Kami with tags.json'); // Local or server path
+        const data = await response.json();
+        window.cardsDatabase = data.Sheet1;
+        displayCards(data.Sheet1);
+    }
+
+    // Display all cards
+    function displayCards(cards) {
+        const cardListElement = document.getElementById('cards');
+        cardListElement.innerHTML = '';
+        cards.forEach(card => {
+            const li = document.createElement('li');
+            li.textContent = `${card['Card Name']}: VP ${card.VP}`;
+            cardListElement.appendChild(li);
         });
-    </script>
+    }
+
+    // Search functionality
+    function searchCards() {
+        const query = document.getElementById('search-input').value.toLowerCase();
+        const filteredCards = window.cardsDatabase.filter(card => {
+            const matchesName = card['Card Name'] && card['Card Name'].toLowerCase().includes(query);
+            const matchesVP = card['VP'] && card['VP'].toString().includes(query);
+            const matchesTags = Object.keys(card).some(key => key.startsWith('Tag:') && card[key] === 1 && key.toLowerCase().includes(query));
+            return matchesName || matchesVP || matchesTags;
+        });
+        displayCards(filteredCards);
+    }
+
+    document.getElementById('search-input').addEventListener('input', searchCards);
+
+    // Load the JSON data when page loads
+    document.addEventListener("DOMContentLoaded", loadJSONData);
+</script>
 </body>
 </html>
