--- a/index.html
+++ b/index.html
@@ -128,49 +128,4 @@
     let cardsDatabase = [];
 
     // Load JSON Data
-    async function loadJSONData() {
-        const response = await fetch('Card Database Kami with tags.json');
-        const data = await response.json();
-        window.cardsDatabase = data.Sheet1;
-        displayCards(data.Sheet1);
-    }
-
-    // Display all cards
-    function displayCards(cards) {
-        const cardListElement = document.getElementById('cards');
-        cardListElement.innerHTML = '';
-        cards.forEach(card => {
-            const li = document.createElement('li');
-            li.textContent = `${card['Card Name']}: VP ${card.VP}`;
-            cardListElement.appendChild(li);
-        });
-    }
-
-    // Search by Card Number and apply VP and tags to trackers
-    function searchCard() {
-        const cardNumber = document.getElementById('cardNumberInput').value;
-        const card = window.cardsDatabase.find(c => c['Card Name'] === cardNumber);
-
-        if (card) {
-            // Add VP to the tracker
-            changeVP(Number(card.VP) || 0);
-
-            // Loop through each tag in the card and update counts if the tag exists
-            Object.keys(card).forEach(key => {
-                if (key.startsWith("Tag:") && card[key] === 1) {
-                    const tag = key.replace("Tag: ", "").toLowerCase();
-                    changeCount(tag, 1);
-                }
-            });
-
-            document.getElementById("cardDetails").innerHTML = `<p>Found card: ${card['Card Name']} with VP: ${card.VP}</p>`;
-        } else {
-            document.getElementById("cardDetails").innerHTML = "<p>Card not found. Please try a different number.</p>";
-        }
-    }
-
-    // Load JSON when page loads
-    document.addEventListener("DOMContentLoaded", loadJSONData);
-</script>
-</body>
-</html>
+    async function loadJSONData()
