--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 <h1>Terraforming Mars Tag Manager</h1>
 
-<!-- Tag Tracker Table -->
+<!-- Tag Tracker Table with All Tags -->
 <table>
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
 <tbody id="tagTable">
@@ -33,7 +33,26 @@
 <td><button onclick="changeCount('earth', 1)">Add</button><button onclick="changeCount('earth', -1)">Remove</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space Tag</td><td><span id="spaceCount">0</span></td>
 <td><button onclick="changeCount('space', 1)">Add</button><button onclick="changeCount('space', -1)">Remove</button></td></tr>
-<!-- Add more tags as necessary -->
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Animal.png"/> Animal Tag</td><td><span id="animalCount">0</span></td>
+<td><button onclick="changeCount('animal', 1)">Add</button><button onclick="changeCount('animal', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png"/> Plant Tag</td><td><span id="plantCount">0</span></td>
+<td><button onclick="changeCount('plant', 1)">Add</button><button onclick="changeCount('plant', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Building.png"/> Building Tag</td><td><span id="buildingCount">0</span></td>
+<td><button onclick="changeCount('building', 1)">Add</button><button onclick="changeCount('building', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Event.png"/> Event Tag</td><td><span id="eventCount">0</span></td>
+<td><button onclick="changeCount('event', 1)">Add</button><button onclick="changeCount('event', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Science.png"/> Science Tag</td><td><span id="scienceCount">0</span></td>
+<td><button onclick="changeCount('science', 1)">Add</button><button onclick="changeCount('science', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Energy.png"/> Energy Tag</td><td><span id="energyCount">0</span></td>
+<td><button onclick="changeCount('energy', 1)">Add</button><button onclick="changeCount('energy', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Microbe.png"/> Microbe Tag</td><td><span id="microbeCount">0</span></td>
+<td><button onclick="changeCount('microbe', 1)">Add</button><button onclick="changeCount('microbe', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Jovian.png"/> Jovian Tag</td><td><span id="jovianCount">0</span></td>
+<td><button onclick="changeCount('jovian', 1)">Add</button><button onclick="changeCount('jovian', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/City.png"/> City Tag</td><td><span id="cityCount">0</span></td>
+<td><button onclick="changeCount('city', 1)">Add</button><button onclick="changeCount('city', -1)">Remove</button></td></tr>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Venus.png"/> Venus Tag</td><td><span id="venusCount">0</span></td>
+<td><button onclick="changeCount('venus', 1)">Add</button><button onclick="changeCount('venus', -1)">Remove</button></td></tr>
 </tbody>
 </table>
 
@@ -63,24 +82,24 @@
 </div>
 
 <script>
-    // Define the tag counts
     const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
 
-    // Function to change tag count and update display
     function changeCount(tag, delta) {
+        if (!document.getElementById(`${tag}Count`)) {
+            console.warn(`Tag element for "${tag}" not found.`);
+            return; // Safely skip if the tag does not exist in the HTML
+        }
         tagCounts[tag] += delta;
         if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
         document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
         updateTotalTags();
     }
 
-    // Function to update the total tags display
     function updateTotalTags() {
         const total = Object.values(tagCounts).reduce((a, b) => a + b, 0);
         document.getElementById('totalTags').innerText = `Total Tags: ${total}`;
     }
 
-    // Variables for VP and TR counts and their display updates
     let vpCount = 0;
     function changeVP(delta) {
         vpCount += delta;
@@ -114,7 +133,7 @@
         }
     }
 
-    // Function to search for a card by number and update VP and tags
+    // Search Card by Card Number and update VP and tags
     function searchCard() {
         const cardNumber = parseInt(document.getElementById('cardNumberInput').value.trim(), 10);
         
@@ -123,7 +142,7 @@
         const card = cardsDatabase.find(c => c['Card Number'] === cardNumber);
 
         if (card) {
-            // Add VP from the card to the VP tracker
+            // Add VP to the tracker
             changeVP(Number(card.VP) || 0);
 
             // Loop through each tag in the card and increment tag counters if applicable
@@ -142,7 +161,7 @@
         }
     }
 
-    // Load JSON on page load
+    // Load JSON on Page Load
     document.addEventListener("DOMContentLoaded", loadJSONData);
 </script>
 </body>
