--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Terraforming Mars Tag Manager</title>
+<title>Kami's Terraforming Mars Tag Manager</title>
 <style>
     /* Styling for body, table, and cards */
     body {
@@ -17,13 +17,7 @@
     table { width: 100%; margin: 0 auto; border-collapse: collapse; background-color: rgba(0, 0, 0, 0.7); }
     th, td { padding: 10px; border: 1px solid #ccc; }
     th { background-color: rgba(255, 255, 255, 0.2); }
-    .button-container {
-        display: flex;
-        justify-content: center;
-        gap: 5px;
-    }
-    button { padding: 5px 10px; background-color: #333; color: white; font-weight: bold; font-size: 16px; border: none; cursor: pointer; }
-    button:hover { background-color: #555; }
+    button { margin: 5px; padding: 5px 10px; background-color: #333; color: white; }
     img { max-width: 100%; width: 40px; height: auto; }
     h1, h2 { background-color: rgba(0, 0, 0, 0.6); padding: 10px; display: inline-block; }
 </style>
@@ -36,29 +30,29 @@
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
 <tbody id="tagTable">
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth Tag</td><td><span id="earthCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1)">-</button></td></tr>
+<td><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space Tag</td><td><span id="spaceCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('space', 1)">+</button><button onclick="changeCount('space', -1)">-</button></td></tr>
+<td><button onclick="changeCount('space', 1)">+</button><button onclick="changeCount('space', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Animal.png"/> Animal Tag</td><td><span id="animalCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('animal', 1)">+</button><button onclick="changeCount('animal', -1)">-</button></td></tr>
+<td><button onclick="changeCount('animal', 1)">+</button><button onclick="changeCount('animal', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png"/> Plant Tag</td><td><span id="plantCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('plant', 1)">+</button><button onclick="changeCount('plant', -1)">-</button></td></tr>
+<td><button onclick="changeCount('plant', 1)">+</button><button onclick="changeCount('plant', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Building.png"/> Building Tag</td><td><span id="buildingCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1)">-</button></td></tr>
+<td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Event.png"/> Event Tag</td><td><span id="eventCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('event', 1)">+</button><button onclick="changeCount('event', -1)">-</button></td></tr>
+<td><button onclick="changeCount('event', 1)">+</button><button onclick="changeCount('event', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Science.png"/> Science Tag</td><td><span id="scienceCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('science', 1)">+</button><button onclick="changeCount('science', -1)">-</button></td></tr>
+<td><button onclick="changeCount('science', 1)">+</button><button onclick="changeCount('science', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Energy.png"/> Energy Tag</td><td><span id="energyCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('energy', 1)">+</button><button onclick="changeCount('energy', -1)">-</button></td></tr>
+<td><button onclick="changeCount('energy', 1)">+</button><button onclick="changeCount('energy', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Microbe.png"/> Microbe Tag</td><td><span id="microbeCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('microbe', 1)">+</button><button onclick="changeCount('microbe', -1)">-</button></td></tr>
+<td><button onclick="changeCount('microbe', 1)">+</button><button onclick="changeCount('microbe', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Jovian.png"/> Jovian Tag</td><td><span id="jovianCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('jovian', 1)">+</button><button onclick="changeCount('jovian', -1)">-</button></td></tr>
+<td><button onclick="changeCount('jovian', 1)">+</button><button onclick="changeCount('jovian', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/City.png"/> City Tag</td><td><span id="cityCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('city', 1)">+</button><button onclick="changeCount('city', -1)">-</button></td></tr>
+<td><button onclick="changeCount('city', 1)">+</button><button onclick="changeCount('city', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Venus.png"/> Venus Tag</td><td><span id="venusCount">0</span></td>
-<td class="button-container"><button onclick="changeCount('venus', 1)">+</button><button onclick="changeCount('venus', -1)">-</button></td></tr>
+<td><button onclick="changeCount('venus', 1)">+</button><button onclick="changeCount('venus', -1)">-</button></td></tr>
 </tbody>
 </table>
 
@@ -88,13 +82,12 @@
 </div>
 
 <script>
-    // Original JavaScript code with no changes to functionality
     const tagCounts = { earth: 0, space: 0, animal: 0, plant: 0, building: 0, event: 0, science: 0, energy: 0, microbe: 0, jovian: 0, city: 0, venus: 0 };
 
     function changeCount(tag, delta) {
         if (!document.getElementById(`${tag}Count`)) {
             console.warn(`Tag element for "${tag}" not found.`);
-            return;
+            return; // Safely skip if the tag does not exist in the HTML
         }
         tagCounts[tag] += delta;
         if (tagCounts[tag] < 0) { tagCounts[tag] = 0; }
@@ -111,4 +104,65 @@
     function changeVP(delta) {
         vpCount += delta;
         if (vpCount < 0) { vpCount = 0; }
-        document.getElementById('vpCount').innerText
+        document.getElementById('vpCount').innerText = vpCount;
+    }
+
+    let trCount = 0;
+    function changeTR(delta) {
+        trCount += delta;
+        if (trCount < 0) { trCount = 0; }
+        document.getElementById('trCount').innerText = trCount;
+    }
+
+    let cardsDatabase = [];
+
+    // Load JSON Data and handle any errors
+    async function loadJSONData() {
+        try {
+            console.log("Attempting to load JSON...");
+            const response = await fetch('Card_Database_with_Numbers.json');
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            const data = await response.json();
+            cardsDatabase = data;
+            console.log("JSON Data Loaded Successfully:", cardsDatabase);
+        } catch (error) {
+            console.error("Error loading JSON:", error);
+            document.getElementById("cardDetails").innerHTML = "<p>Error loading card data. Check console for details.</p>";
+        }
+    }
+
+    // Search Card by Card Number and update VP and tags
+    function searchCard() {
+        const cardNumber = parseInt(document.getElementById('cardNumberInput').value.trim(), 10);
+        
+        console.log("Searching for Card Number:", cardNumber);
+        
+        const card = cardsDatabase.find(c => c['Card Number'] === cardNumber);
+
+        if (card) {
+            // Add VP to the tracker
+            changeVP(Number(card.VP) || 0);
+
+            // Loop through each tag in the card and increment tag counters if applicable
+            Object.keys(card).forEach(key => {
+                if (key.startsWith("Tag:") && card[key] === 1) {
+                    const tag = key.replace("Tag: ", "").toLowerCase();
+                    changeCount(tag, 1);
+                }
+            });
+
+            document.getElementById("cardDetails").innerHTML = `<p>Found card: ${card['Card Name']} with VP: ${card.VP}</p>`;
+            console.log("Card found:", card); 
+        } else {
+            document.getElementById("cardDetails").innerHTML = "<p>Card not found. Please try a different number.</p>";
+            console.log("Card not found:", cardNumber); 
+        }
+    }
+
+    // Load JSON on Page Load
+    document.addEventListener("DOMContentLoaded", loadJSONData);
+</script>
+</body>
+</html>
