--- a/index.html
+++ b/index.html
@@ -30,16 +30,7 @@
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
 <tbody id="tagTable">
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth Tag</td><td><span id="earthCount">0</span></td>
-<tr>
-    <td><img src="path/to/image.png" /> Earth Tag</td>
-    <td><span id="earthCount">0</span></td>
-    <td>
-        <div class="button-container">
-            <button onclick="changeCount('earth', 1)">+</button>
-            <button onclick="changeCount('earth', -1)">-</button>
-        </div>
-    </td>
-</tr>
+<td><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space Tag</td><td><span id="spaceCount">0</span></td>
 <td><button onclick="changeCount('space', 1)">+</button><button onclick="changeCount('space', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Animal.png"/> Animal Tag</td><td><span id="animalCount">0</span></td>
