--- a/index.html
+++ b/index.html
@@ -29,29 +29,29 @@
 <table>
 <thead><tr><th>Tag</th><th>Count</th><th>Actions</th></tr></thead>
 <tbody id="tagTable">
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth Tag</td><td><span id="earthCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Earth.png"/> Earth </td><td><span id="earthCount">0</span></td>
 <td><button onclick="changeCount('earth', 1)">+</button><button onclick="changeCount('earth', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space Tag</td><td><span id="spaceCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Space.png"/> Space </td><td><span id="spaceCount">0</span></td>
 <td><button onclick="changeCount('space', 1)">+</button><button onclick="changeCount('space', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Animal.png"/> Animal Tag</td><td><span id="animalCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Animal.png"/> Animal </td><td><span id="animalCount">0</span></td>
 <td><button onclick="changeCount('animal', 1)">+</button><button onclick="changeCount('animal', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png"/> Plant Tag</td><td><span id="plantCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png"/> Plant </td><td><span id="plantCount">0</span></td>
 <td><button onclick="changeCount('plant', 1)">+</button><button onclick="changeCount('plant', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Building.png"/> Building Tag</td><td><span id="buildingCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Building.png"/> Building </td><td><span id="buildingCount">0</span></td>
 <td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Event.png"/> Event Tag</td><td><span id="eventCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Event.png"/> Event </td><td><span id="eventCount">0</span></td>
 <td><button onclick="changeCount('event', 1)">+</button><button onclick="changeCount('event', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Science.png"/> Science Tag</td><td><span id="scienceCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Science.png"/> Science </td><td><span id="scienceCount">0</span></td>
 <td><button onclick="changeCount('science', 1)">+</button><button onclick="changeCount('science', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Energy.png"/> Energy Tag</td><td><span id="energyCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Energy.png"/> Energy </td><td><span id="energyCount">0</span></td>
 <td><button onclick="changeCount('energy', 1)">+</button><button onclick="changeCount('energy', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Microbe.png"/> Microbe Tag</td><td><span id="microbeCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Microbe.png"/> Microbe </td><td><span id="microbeCount">0</span></td>
 <td><button onclick="changeCount('microbe', 1)">+</button><button onclick="changeCount('microbe', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Jovian.png"/> Jovian Tag</td><td><span id="jovianCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Jovian.png"/> Jovian </td><td><span id="jovianCount">0</span></td>
 <td><button onclick="changeCount('jovian', 1)">+</button><button onclick="changeCount('jovian', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/City.png"/> City Tag</td><td><span id="cityCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/City.png"/> City </td><td><span id="cityCount">0</span></td>
 <td><button onclick="changeCount('city', 1)">+</button><button onclick="changeCount('city', -1)">-</button></td></tr>
-<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Venus.png"/> Venus Tag</td><td><span id="venusCount">0</span></td>
+<tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Venus.png"/> Venus </td><td><span id="venusCount">0</span></td>
 <td><button onclick="changeCount('venus', 1)">+</button><button onclick="changeCount('venus', -1)">-</button></td></tr>
 </tbody>
 </table>
