--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </style>
 </head>
 <body>
-<h1>Kami's Terraforming Mars Manager</h1>
+<h1>Terraforming Mars Manager by Kami</h1>
 
 <!-- Tag Tracker Table with All Tags -->
 <table>
