--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png"/> Plant </td><td><span id="plantCount">0</span></td>
 <td><button onclick="changeCount('plant', 1)">+</button><button onclick="changeCount('plant', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Building.png"/> Building </td><td><span id="buildingCount">0</span></td>
-<td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1)">-</button></td></tr>
+<td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1')">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Event.png"/> Event </td><td><span id="eventCount">0</span></td>
 <td><button onclick="changeCount('event', 1)">+</button><button onclick="changeCount('event', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Science.png"/> Science </td><td><span id="scienceCount">0</span></td>
@@ -82,7 +82,7 @@
 </div>
 
 <!-- Reset Game Button -->
-<div id="resetSection">
+<div id="resetSection" style="margin-top: 50px;">
     <button onclick="resetGameState()">Reset Game</button>
 </div>
 
@@ -145,4 +145,73 @@
     function searchCard() {
         const cardInput = document.getElementById('cardNumberInput').value.trim();
         const isNumeric = /^\d+$/.test(cardInput);
-        const card
+        const cardNumber = isNumeric ? parseInt(cardInput, 10) : cardInput;
+        const card = cardsDatabase.find(c => c['Card Number'] === cardNumber);
+
+        if (card) {
+            changeVP(Number(card.VP) || 0);
+            Object.keys(card).forEach(key => {
+                if (key.startsWith("Tag:") && card[key] === 1) {
+                    const tag = key.replace("Tag: ", "").toLowerCase();
+                    changeCount(tag, 1);
+                }
+            });
+
+            document.getElementById("cardDetails").innerHTML = `<p>Found card: ${card['Card Name']} with VP: ${card.VP}</p>`;
+            console.log("Card found:", card); 
+        } else {
+            document.getElementById("cardDetails").innerHTML = "<p>Card not found. Please try a different number.</p>";
+            console.log("Card not found:", cardInput); 
+        }
+    }
+
+    // Save game state to local storage
+    function saveGameState() {
+        const gameState = {
+            vpCount,
+            trCount,
+            tagCounts
+        };
+        localStorage.setItem('terraformingMarsGameState', JSON.stringify(gameState));
+    }
+
+    // Load game state from local storage
+    function loadGameState() {
+        const savedState = localStorage.getItem('terraformingMarsGameState');
+        if (savedState) {
+            const gameState = JSON.parse(savedState);
+            vpCount = gameState.vpCount || 0;
+            trCount = gameState.trCount || 0;
+            document.getElementById('vpCount').innerText = vpCount;
+            document.getElementById('trCount').innerText = trCount;
+
+            Object.keys(gameState.tagCounts).forEach(tag => {
+                tagCounts[tag] = gameState.tagCounts[tag];
+                document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
+            });
+            updateTotalTags();
+        }
+    }
+
+    // Reset game state
+    function resetGameState() {
+        vpCount = 0;
+        trCount = 0;
+        Object.keys(tagCounts).forEach(tag => {
+            tagCounts[tag] = 0;
+            document.getElementById(`${tag}Count`).innerText = tagCounts[tag];
+        });
+        document.getElementById('vpCount').innerText = vpCount;
+        document.getElementById('trCount').innerText = trCount;
+        updateTotalTags();
+        localStorage.removeItem('terraformingMarsGameState'); // Clear saved state
+    }
+
+    // Load JSON and game state on Page Load
+    document.addEventListener("DOMContentLoaded", () => {
+        loadJSONData();
+        loadGameState();
+    });
+</script>
+</body>
+</html>
