--- a/index.html
+++ b/index.html
@@ -213,5 +213,8 @@
         loadGameState();
     });
 </script>
+<div id="personalPhoto" style="margin-top: 50px;">
+    <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="max-width: 200px; border-radius: 10px;">
+</div>
 </body>
 </html>
