--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     });
 </script>
 <div id="personalPhoto" style="margin-top: 50px;">
-    <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="max-width: 1600px; border-radius: 10px;">
+    <img src="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/IMG_20241003_123711%20-%20Copy.jpg" alt="My Photo" style="width: 100%; max-width: 800px; height: auto; border-radius: 10px;">
 </div>
 </body>
 </html>
