--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Plant.png"/> Plant </td><td><span id="plantCount">0</span></td>
 <td><button onclick="changeCount('plant', 1)">+</button><button onclick="changeCount('plant', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Building.png"/> Building </td><td><span id="buildingCount">0</span></td>
-<td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1')">-</button></td></tr>
+<td><button onclick="changeCount('building', 1)">+</button><button onclick="changeCount('building', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Event.png"/> Event </td><td><span id="eventCount">0</span></td>
 <td><button onclick="changeCount('event', 1)">+</button><button onclick="changeCount('event', -1)">-</button></td></tr>
 <tr><td><img src="https://killionaire23.github.io/Terraforming-Mars/Science.png"/> Science </td><td><span id="scienceCount">0</span></td>
